--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "OAS (Swagger v3) API Definition for Template API",
   "scripts": {
     "lint": "node_modules/.bin/speccy lint specification/identity-service.yaml --skip default-and-example-are-redundant",
-    "publish": "mkdir -p build && node_modules/.bin/speccy resolve specification/template-api.yaml -i | poetry run python scripts/yaml2json.py | poetry run python scripts/set_version.py > build/template-api.json",
-    "serve": "node_modules/.bin/speccy serve build/template-api.json",
+    "publish": "mkdir -p build && node_modules/.bin/speccy resolve specification/identity-service.yaml -i | poetry run python scripts/yaml2json.py | poetry run python scripts/set_version.py > build/identity-service.json",
+    "serve": "node_modules/.bin/speccy serve build/identity-service.json",
     "check-licenses": "node_modules/.bin/license-checker --failOn GPL --failOn LGPL"
   },
   "author": "NHS Digital",
