APM-501 Trigger on tags

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,12 @@
-name: "$(Version)+$(BuildID)"
+name: "$(BranchName)+$(BuildID)"
 
 variables:
   Version: 'test'
 
 trigger:
-- master
+  tags:
+    include:
+      - v*
 
 pr:
   branches:
