APM-501 Try to fix tag deply display

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,9 @@
 name: "$(SourceBranchName)+$(BuildID)"
 
 trigger:
+  branches:
+    include:
+      - tags/refs/v*
   tags:
     include:
       - v*
