APM-501 Add namespacing

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,10 @@ jobs:
     steps:
       - checkout: self
 
+      - bash: 'echo "##vso[build.updatebuildnumber]$(System.PullRequest.SourceBranch)+$(Build.BuildID)"'
+        condition: eq(variables['Build.SourceBranchName'], 'merge')
+        displayName: Update build ID if this is a pull request
+
       - task: UsePythonVersion@0
         displayName: "Use Python 3.8"
         inputs:
