APM-501 Attempt to generate artifact with better name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-name: "$(SourceBranchName)+$(BuildID)"
+name: "$(System.PullRequest.SourceBranchName)$(SourceBranchName)+$(BuildID)"
 
 trigger:
   branches:
