APM-501 Fix Source Branch in artifact title

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,4 @@
-name: "$(System.PullRequest.SourceBranchName)$(SourceBranchName)+$(BuildID)"
+name: "$(System.PullRequest.SourceBranch)$(SourceBranchName)+$(BuildID)"
 
 trigger:
   branches:
