APM-501 Set build name conditionally based on if it is a PR or not

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,7 @@
-name: "$(System.PullRequest.SourceBranch)$(SourceBranchName)+$(BuildID)"
+${{ if eq(variables['SourceBranchName'], 'merge') }}:
+  name: "$(System.PullRequest.SourceBranch)+$(BuildID)"
+${{ if ne(variables['SourceBranchName'], 'merge') }}:
+  name: "$(SourceBranchName)+$(BuildID)"
 
 trigger:
   branches:
