--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,4 @@
-name:
-  ${{ if eq(variables['SourceBranchName'], 'merge') }}: "$(System.PullRequest.SourceBranch)+$(BuildID)"
-  ${{ if ne(variables['SourceBranchName'], 'merge') }}: "$(SourceBranchName)+$(BuildID)"
+name: "$(SourceBranchName)+$(BuildID)"
 
 trigger:
   branches:
@@ -25,6 +23,10 @@ jobs:
       PIP_CACHE_DIR: ".poetry"
     steps:
       - checkout: self
+
+
+      - bash: 'if [ "$(SourceBranch)" -eq "merge" ]; then echo "##vso[build.updatebuildnumber]$(System.PullRequest.SourceBranch)+$(BuildID)" ; fi'
+        displayName: Update build ID if this is a pull request
 
       - task: UsePythonVersion@0
         displayName: "Use Python 3.8"
