--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
 
 
       - bash: 'echo "##vso[build.updatebuildnumber]$(System.PullRequest.SourceBranch)+$(BuildID)"'
-        condition: eq(variables['SourceBranchName'], 'merge')
+        condition: eq(variables['Build.SourceBranchName'], 'merge')
         displayName: Update build ID if this is a pull request
 
       - task: UsePythonVersion@0
