--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,14 @@ jobs:
         inputs:
           versionSpec: "3.8"
 
-      - bash: "sudo apt update && sudo apt-get install --yes default-jre default-jdk npm"
+      - bash: "sudo apt update && sudo apt-get install --yes default-jre default-jdk"
         displayName: Install apt dependencies
+
+      - bash: |
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+        displayName: Install Node
 
       - bash: "python -m pip install --upgrade pip setuptools wheel && pip install poetry"
         displayName: Install python dependencies
