--- a/specification/identity-service.yaml
+++ b/specification/identity-service.yaml
@@ -4,7 +4,7 @@ info:
   title: Identity Service API
   description: |
     ## Overview
-    TODO
+    Use this API to access the OAuth capabilities of the Identity Service
     
     You can:
     * TODO
@@ -65,17 +65,98 @@ info:
     More details to follow.
 
     ## Endpoints
-    TODO
+    To see details for specific endpoints, select from the list on the left hand side of the page:
+    * `GET /authorize` - request token or authorization codes via the browser
+    * `POST /token` - request or refresh tokens
+    TODO: Add /callback and /userinfo
   contact:
-    name: API Management Support
+    name: Identity Service API Support
     url: 'https://tbc.api.nhs.net'
     email: tbc-api-support@nhs.net
 servers:
-  - url: 'https://sandbox.api.service.nhs.uk/identity-service/oauth/v2'
+  - url: 'https://sandbox.api.service.nhs.uk/identity-service/oauth2'
     description: Identity sandbox.
 tags:
-  - name: identity
-    description: identity related tag
+  - name: authorize
 paths:
-  /oauth/v2:
-    summary: OAuth endpoint
+  /authorize:
+    get:
+      tags:
+        - authorize
+      summary: Request token or authorization codes via the browser
+      operationId: authorize
+      description: The Authorization endpoint is used to interact with the resource owner and get the authorization to access the protected resource.
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                response_type:
+                  type: string
+                client_id:
+                  type: string
+                redirect_uri:
+                  type: string
+                scope:
+                  type: string
+                state:
+                  type: string
+              required:
+                - response_type
+                - client_id
+      # parameters:
+      #   - in: query
+      #     name: response_type
+      #     description: Tells the authorization server which grant to execute
+      #     required: true
+      #     schema:
+      #       type: string
+      #       enum:
+      #         - code
+      #   - in: query
+      #     name: client_id
+      #     description: The id of the application that asks for authorization
+      #     required: true
+      #     schema:
+      #       type: string
+      #   - in: query
+      #     name: redirect_uri
+      #     description: Holds a URL. A successful response from this endpoint results in a redirect to this URL
+      #     required: false
+      #     schema:
+      #       type: string
+      #       format: uri
+      #       example: https://example.app.nhs.net
+      #   - in: query
+      #     name: scope
+      #     description: A space-delimited list of permissions that the application requires
+      #     required: false
+      #     schema:
+      #       type: string
+      #       example: openid
+      #   - in: query
+      #     name: state
+      #     description: |
+      #       An opaque value, used for security purposes. If this request parameter is set in the request, then it is returned to the application as part of the redirect_uri.
+
+      #       Note: The parameter SHOULD be used for preventing cross-site request forgery
+      #     required: false
+      #     schema:
+      #       type: string
+      #       example: d04a38c3-e508-4c43-9918-76c7203c7ade
+      responses:
+        '302':
+          description: A successful authorization containing a authorization code and redirects to redirect_uri
+          content:
+            application/x-www-form-urlencoded:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                  state:
+                    type: string
+                required:
+                  - code
