--- a/specification/identity-service.yaml
+++ b/specification/identity-service.yaml
@@ -7,16 +7,16 @@ info:
     Use this API to access the OAuth capabilities of the Identity Service
     
     You can:
-    * TODO
+    * Get authorization code
+    * Exchange authorization code for access token
 
     You cannot currently use this API to:
-    * TODO
-    
+    * Request user information
+
     You can access the following data:
-    * TODO
+    - TODO
 
     ## Related APIs
-    TODO
     
     ## API status and roadmap
     TODO
@@ -68,7 +68,7 @@ info:
     To see details for specific endpoints, select from the list on the left hand side of the page:
     * `GET /authorize` - request token or authorization codes via the browser
     * `POST /token` - request or refresh tokens
-    TODO: Add /callback and /userinfo
+    TODO: Add /callback and /userinfo enpoints
   contact:
     name: Identity Service API Support
     url: 'https://tbc.api.nhs.net'
@@ -135,35 +135,12 @@ paths:
                     type: string
                 required:
                   - code
-        default:
-          description: Authorization Error
-          content:
-            application/x-www-form-urlencoded:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    description: A single ASCII error code
-                    enum:
-                      - invalid_request
-                      - unauthorized_client
-                      - access_denied
-                      - unsupported_response_type
-                      - invalid_scope
-                      - server_error
-                      - temporarily_unavailable
-                  error_description:
-                    type: string
-                    description: Human-readable ASCII text providing additional information, used to assist the client developer in understanding the error that occurred.
-                  error_uri:
-                    type: string
-                    format: uri
-                    example: https://example.app.nhs.net
-                required:
-                  - error
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
   /token:
-    get:
+    post:
       tags:
         - token
       summary: Obtain an access token
@@ -253,4 +230,19 @@ paths:
                     example: https://example.app.nhs.net
                 required:
                   - error
-              
+
+# Description of common components
+components:
+  responses:
+    BadRequest:
+      description: Invalid request
+      content:
+        application/json:
+          schema:
+            $ref: 'components/schemas/ErrorResponse.yaml'
+    Unauthorized: 
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            $ref: 'components/schemas/ErrorResponse.yaml'
