--- a/specification/identity-service.yaml
+++ b/specification/identity-service.yaml
@@ -167,6 +167,7 @@ paths:
                   type: string
                   enum:
                     - authorization_code
+                    - refresh_token
                 code:
                   type: string
                   description: The authorization code.
@@ -184,6 +185,10 @@ paths:
                   type: string
                   example: UdsgcsZEksvC0Z2u
                   description: The application's secret
+                refresh_token:
+                  type: string
+                  description: The refresh token issued to the client.
+                  example: kZGchM9w6Btd7lADUcXjmaAmzxmYbZGY
               required:
                 - grant_type
                 - code
@@ -214,10 +219,14 @@ paths:
                     type: string
                     description: The refresh token, which can be used to obtain new access tokens
                     example: pUDyf17ZD29QjQ7tjaHZnbVItztmM9bI
-                  scope:
+                  refresh_count:
                     type: string
-                    description: A space-delimited list of permissions that the application requires
-                    example: openid
+                    description: The number of times the token has been refreshed.
+                    example: "1"
+                  refresh_token_expires_in:
+                    type: integer
+                    description: The lifetime in seconds of the refresh token.
+                    example: 35999
                 required:
                   - access_token
                   - token_type
