apm-801 added error condition test cases for the token endpoint

--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -3,8 +3,8 @@ addopts = --strict-markers -v
 python_classes = Test*Suite
 junit_family=xunit1
 markers =
-    errors: check against error conditions
-    happy_path: this is a description
-    token_endpoint:
-    authorize_endpoint:
-    token_refresh:
+    errors: checks against error conditions
+    happy_path: checks happy path scenarios
+    token_endpoint: associated with the /token endpoint
+    authorize_endpoint: associated with the /authorize endpoint
+    token_refresh: checking the tokens behaviour
