apm-801 refactored code, fixed issues, added readme and created new test cases

--- a/api_tests/Dockerfile
+++ b/api_tests/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8-slim
 
 # Maintainers
-MAINTAINER API Management Team <..@..>
+MAINTAINER API Management Team
 
 # Update if required
 RUN mkdir -p /var/api_tests/
