--- a/api_tests/docker.env
+++ b/api_tests/docker.env
@@ -2,6 +2,9 @@ BASE_URL=
 CLIENT_ID=
 CLIENT_SECRET=
 REDIRECT_URI=
+AUTHENTICATION_PROVIDER=
 AUTHENTICATE_URL=
-USERNAME=
-PASSWORD=
+AUTHENTICATE_USERNAME=
+AUTHENTICATE_PASSWORD=
+API_URL=
+APIGEE_CLIENT_ID=
