--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -8,3 +8,5 @@ markers =
     token_endpoint: associated with the /token endpoint
     authorize_endpoint: associated with the /authorize endpoint
     token_refresh: checking the tokens behaviour
+    env: a reference to the Jira ticket number e.g. test_id(750)
+    apm_*: a reference to the Jira ticket this test belongs to
