apm-801 removed unsupported wildcard from pytest.ini

--- a/api_tests/tests/pytest.ini
+++ b/api_tests/tests/pytest.ini
@@ -9,4 +9,6 @@ markers =
     authorize_endpoint: associated with the /authorize endpoint
     token_refresh: checking the tokens behaviour
     env: a reference to the Jira ticket number e.g. test_id(750)
-    apm_*: a reference to the Jira ticket this test belongs to
+
+    # Jira APM tickets included
+    apm_801: a reference to the Jira ticket this test belongs to
