Update azure-release-pipelines.yml for Azure Pipelines

--- a/azure-release-pipelines.yml
+++ b/azure-release-pipelines.yml
@@ -4,8 +4,8 @@ trigger: none
 
 resources:
   pipelines:
-  - pipeline: IdentityServiceApiArtifact
-    source: "$(SourceBranchName)+$(BuildID)"
+  - pipeline: IdentityServiceAPIArtifact
+    source: NHSDigital.identity-service-api
 
 pool:
   vmImage: 'ubuntu-18.04'
