--- a/azure-release-pipelines.yml
+++ b/azure-release-pipelines.yml
@@ -14,51 +14,9 @@ stages:
 - stage: DeployInternalDev
   displayName: internal-dev
   jobs:
-  - job: IdentityServiceTemplating
-    pool:
-      vmImage: 'ubuntu-18.04'
-    steps:
-    # Add the task group into its own template
-    - task: UsePythonVersion@0
-      displayName: 'Use Python 3.8'
-      inputs:
-        versionSpec: 3.8
-
-    - bash: |
-        sudo apt-get install git -y
-        git clone https://github.com/NHSDigital/api-management-utils.git utils
-        cd utils
-        pip install --upgrade pip setuptools
-        pip install poetry
-        poetry install
-      displayName: 'Set up utils'
-
-    - bash: |
-        set -euo pipefail
-        export SERVICE_ARTIFACT_NAME=`ls $(SERVICE_NAME)`
-        echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"    
-      displayName: 'Set SERVICE_ARTIFACT_NAME'
-
-    - bash: |
-        set -euo pipefail
-        
-        cd utils
-        
-        poetry run python scripts/template.py '{"VARIABLES_KVM": "$(VARIABLES_KVM)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml > /tmp/live.xml
-        mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml
-        
-        poetry run python scripts/template.py '{"ENCRYPTED_VARIABLES_KVM": "$(ENCRYPTED_VARIABLES_KVM)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml > /tmp/live.xml
-        mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml
-        
-        poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml > /tmp/live.xml
-        mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml
-        
-        poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml > /tmp/live.xml
-        mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml
-        
-        poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml > /tmp/live.xml
-        mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml
-      displayName: 'Set KVM and Target Server'
+  - template: templates/identity-service-templating.yml
+    parameters:
+      SERVICE_NAME: $(SERVICE_NAME)
 
 - stage: DeployInternalDevSandbox
   displayName: internal-dev (sandbox)
