APM-882 Add variable group

--- a/azure-release-pipelines.yml
+++ b/azure-release-pipelines.yml
@@ -13,6 +13,9 @@ pool:
 stages:
 - stage: DeployInternalDev
   displayName: internal-dev
+  variables:
+  - group: apigee-nonprod
+  - group: env-internal-dev
   jobs:
   - template: templates/identity-service-templating.yml
     parameters:
