APM-882 Add hard coded variable

--- a/azure-release-pipelines.yml
+++ b/azure-release-pipelines.yml
@@ -19,7 +19,7 @@ stages:
   jobs:
   - template: templates/identity-service-templating.yml
     parameters:
-      SERVICE_NAME: $(SERVICE_NAME)
+      SERVICE_NAME: identity-service
 
 - stage: DeployInternalDevSandbox
   displayName: internal-dev (sandbox)
