--- a/azure-release-pipelines.yml
+++ b/azure-release-pipelines.yml
@@ -17,10 +17,13 @@ stages:
   - group: apigee-nonprod
   - group: env-internal-dev
   jobs:
-  - template: templates/identity-service-templating.yml
-    parameters:
-      SERVICE_NAME: identity-service
-  - template: templates/deploy-service.yml
+    - job: DeployService
+      displayName: Deploy Service
+      steps:
+        - template: templates/identity-service-templating.yml
+          parameters:
+            SERVICE_NAME: identity-service
+        - template: templates/deploy-service.yml
 
 - stage: DeployInternalDevSandbox
   displayName: internal-dev (sandbox)
