--- a/templates/identity-service-templating.yml
+++ b/templates/identity-service-templating.yml
@@ -2,7 +2,6 @@ parameters:
 - name: SERVICE_NAME
   type: string
 
-
 steps:
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.8'
@@ -20,8 +19,8 @@ steps:
 
   - bash: |
       set -euo pipefail
-      ls
-      export SERVICE_ARTIFACT_NAME=`ls ${{ parameters.SERVICE_NAME}}`
+      ls $(System.ArtifactsDirectory)
+      export SERVICE_ARTIFACT_NAME=`ls ${{ parameters.SERVICE_NAME }}`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
     displayName: 'Set SERVICE_ARTIFACT_NAME'
 
