--- a/templates/identity-service-templating.yml
+++ b/templates/identity-service-templating.yml
@@ -20,7 +20,7 @@ steps:
   - bash: |
       set -euo pipefail
       ls -a
-      ls -a $(System.ArtifactsDirectory)
+      ls -a $(Pipeline.Workspace)
       export SERVICE_ARTIFACT_NAME=`ls ${{ parameters.SERVICE_NAME }}`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
     displayName: 'Set SERVICE_ARTIFACT_NAME'
