--- a/templates/identity-service-templating.yml
+++ b/templates/identity-service-templating.yml
@@ -1,6 +1,12 @@
 parameters:
 - name: SERVICE_NAME
   type: string
+- name: VARIABLES_KVM
+  type: string
+- name: ENCRYPTED_VARIABLES_KVM
+  type: string
+- name: IDENTITY_TARGET_SERVER
+  type: string
 
 steps:
   - task: UsePythonVersion@0
@@ -28,18 +34,18 @@ steps:
       
       cd utils
       
-      poetry run python scripts/template.py '{"VARIABLES_KVM": "$(VARIABLES_KVM)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml > /tmp/live.xml
-      mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml
+      poetry run python scripts/template.py '{"VARIABLES_KVM": "$(VARIABLES_KVM)"}' --file=$(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml > /tmp/live.xml
+      mv /tmp/live.xml $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetVariables.xml
       
-      poetry run python scripts/template.py '{"ENCRYPTED_VARIABLES_KVM": "$(ENCRYPTED_VARIABLES_KVM)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml > /tmp/live.xml
-      mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml
+      poetry run python scripts/template.py '{"ENCRYPTED_VARIABLES_KVM": "$(ENCRYPTED_VARIABLES_KVM)"}' --file=$(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml > /tmp/live.xml
+      mv /tmp/live.xml $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/KeyValueMapOperations.GetSecureVariables.xml
       
-      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml > /tmp/live.xml
-      mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml
+      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml > /tmp/live.xml
+      mv /tmp/live.xml $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/targets/identity-server.xml
       
-      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml > /tmp/live.xml
-      mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml
+      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml > /tmp/live.xml
+      mv /tmp/live.xml $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.GetJWKS.xml
       
-      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml > /tmp/live.xml
-      mv /tmp/live.xml $(System.DefaultWorkingDirectory)/identity-service/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml
+      poetry run python scripts/template.py '{"IDENTITY_TARGET_SERVER": "$(IDENTITY_TARGET_SERVER)"}' --file=$(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml > /tmp/live.xml
+      mv /tmp/live.xml $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies/live/apiproxy/policies/ServiceCallout.PostToken.xml
     displayName: 'Set KVM and Target Server'
