--- a/templates/deploy-service.yml
+++ b/templates/deploy-service.yml
@@ -1,3 +1,7 @@
+parameters:
+  - name: SERIVCE_NAME
+    type: string
+
 steps:
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.8'
@@ -11,7 +15,7 @@ steps:
       pip install --upgrade pip setuptools
       pip install poetry
       poetry install
-    displayName: 'Deploy $(SERVICE_NAME) > Set up utils'
+    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Set up utils'
 
   - template: setup-terraform.yml
 
@@ -19,7 +23,7 @@ steps:
       sudo apt-get install oathtool gnupg2 jq -y
       export MFA_CODE=`oathtool --totp -b '$(APIGEE_OTP_KEY)'`
       echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
-    displayName: 'Deploy $(SERVICE_NAME) > Get MFA Code'
+    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Get MFA Code'
 
   - bash: |
       curl -X POST https://login.apigee.com/oauth/token \
@@ -30,32 +34,32 @@ steps:
       
       # Set token into variable
       echo "##vso[task.setvariable variable=secret.AccessToken;issecret=true]`cat .token`"
-    displayName: 'Deploy $(SERVICE_NAME) > Get Access Token'
+    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Get Access Token'
 
   - bash: |
       set -euo pipefail
       
       echo "!!! If you get an error here, it is because '$(SERVICE_NAME)' is not the source alias name of the artifact"
-      export SERVICE_ARTIFACT_NAME=`ls $(SERVICE_NAME)`
+      export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
       echo "Deploying $SERVICE_ARTIFACT_NAME to $(SERVICE_BASE_PATH) on $(ENV_URL)"
       echo "Using custom terraform: $(USE_CUSTOM_TERRAFORM)"
-    displayName: 'Deploy $(SERVICE_NAME) > Deploy Info'
+    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Deploy Info'
 
   - bash: |
       set -euo pipefail
     
-      export PROXIES_DIR="$(System.DefaultWorkingDirectory)/$(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/proxies"
+      export PROXIES_DIR="$(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/proxies"
       export SERVICE_BASE_PATH="$(SERVICE_BASE_PATH)"
       export APIGEE_ENVIRONMENT="$(APIGEE_ENVIRONMENT)"
       
       make --no-print-directory -C utils/ansible template-proxies
-    displayName: 'Deploy $(SERVICE_NAME) > template proxies'
+    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > template proxies'
 
   - bash: |
       set -euo pipefail
       
-      cd $(SERVICE_NAME)/$(SERVICE_ARTIFACT_NAME)/terraform
+      cd $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/terraform
       
       terraform init -no-color -backend-config="storage_account_name=hawdonnhsddevopssacc" -backend-config="container_name=$(APIGEE_ORGANIZATION)" -backend-config="key=$(APIGEE_ENVIRONMENT)-$(SERVICE_NAME).tfstate" -backend-config="sas_token=$(SAS_TOKEN)"
       
@@ -77,7 +81,7 @@ steps:
       
       terraform plan -input=false -no-color  -var-file=./tmp.tfvars -out tfplan.out
       terraform apply -no-color -auto-approve tfplan.out
-    displayName: 'Deploy $(SERVICE_NAME) > Deploy'
+    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Deploy'
   
   - bash: |
       set -euo pipefail
