APM-882 change variables

--- a/templates/deploy-service.yml
+++ b/templates/deploy-service.yml
@@ -15,7 +15,7 @@ steps:
       pip install --upgrade pip setuptools
       pip install poetry
       poetry install
-    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Set up utils'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > Set up utils'
 
   - template: setup-terraform.yml
 
@@ -23,7 +23,7 @@ steps:
       sudo apt-get install oathtool gnupg2 jq -y
       export MFA_CODE=`oathtool --totp -b '$(APIGEE_OTP_KEY)'`
       echo "##vso[task.setvariable variable=secret.MFACode;issecret=true]$MFA_CODE"
-    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Get MFA Code'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > Get MFA Code'
 
   - bash: |
       curl -X POST https://login.apigee.com/oauth/token \
@@ -34,17 +34,17 @@ steps:
       
       # Set token into variable
       echo "##vso[task.setvariable variable=secret.AccessToken;issecret=true]`cat .token`"
-    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Get Access Token'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > Get Access Token'
 
   - bash: |
       set -euo pipefail
       
-      echo "!!! If you get an error here, it is because '$(SERVICE_NAME)' is not the source alias name of the artifact"
+      echo "!!! If you get an error here, it is because '${{ parameters.SERVICE_NAME }}' is not the source alias name of the artifact"
       export SERVICE_ARTIFACT_NAME=`ls $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}`
       echo "##vso[task.setvariable variable=SERVICE_ARTIFACT_NAME]$SERVICE_ARTIFACT_NAME"
       echo "Deploying $SERVICE_ARTIFACT_NAME to $(SERVICE_BASE_PATH) on $(ENV_URL)"
       echo "Using custom terraform: $(USE_CUSTOM_TERRAFORM)"
-    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Deploy Info'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > Deploy Info'
 
   - bash: |
       set -euo pipefail
@@ -54,14 +54,14 @@ steps:
       export APIGEE_ENVIRONMENT="$(APIGEE_ENVIRONMENT)"
       
       make --no-print-directory -C utils/ansible template-proxies
-    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > template proxies'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > template proxies'
 
   - bash: |
       set -euo pipefail
       
       cd $(Pipeline.Workspace)/${{ parameters.SERVICE_NAME }}/$(SERVICE_ARTIFACT_NAME)/terraform
       
-      terraform init -no-color -backend-config="storage_account_name=hawdonnhsddevopssacc" -backend-config="container_name=$(APIGEE_ORGANIZATION)" -backend-config="key=$(APIGEE_ENVIRONMENT)-$(SERVICE_NAME).tfstate" -backend-config="sas_token=$(SAS_TOKEN)"
+      terraform init -no-color -backend-config="storage_account_name=hawdonnhsddevopssacc" -backend-config="container_name=$(APIGEE_ORGANIZATION)" -backend-config="key=$(APIGEE_ENVIRONMENT)-${{ parameters.SERVICE_NAME }}.tfstate" -backend-config="sas_token=$(SAS_TOKEN)"
       
       export API_ACCESS_TOKEN="$(secret.AccessToken)"
       
@@ -81,11 +81,11 @@ steps:
       
       terraform plan -input=false -no-color  -var-file=./tmp.tfvars -out tfplan.out
       terraform apply -no-color -auto-approve tfplan.out
-    displayName: 'Deploy {{ parameters.SERVICE_NAME }} > Deploy'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > Deploy'
   
   - bash: |
       set -euo pipefail
       
       # TODO re-enable once i figure out how to get alternative SANs to work
       # curl --fail -I $(CURL_ARGUMENTS)
-    displayName: 'Deploy $(SERVICE_NAME) > Smoke test'
+    displayName: 'Deploy ${{ parameters.SERVICE_NAME }} > Smoke test'
