APM-882 add base path variables

--- a/azure-release-pipelines.yml
+++ b/azure-release-pipelines.yml
@@ -33,6 +33,7 @@ stages:
               - template: templates/deploy-service.yml
                 parameters:
                   SERVICE_NAME: IdentityService
+                  SERVICE_BASE_PATH: /oauth2
 
 - stage: DeployInternalDevSandbox
   displayName: internal-dev (sandbox)
