--- a/azure/azure-pr-pipeline.yml
+++ b/azure/azure-pr-pipeline.yml
@@ -1,6 +1,10 @@
-name: Identity Service Release
+name: Identity Service Pull Request
 
-trigger: none
+pr:
+- master
+
+variables:
+  SERVICE_NAME: IdentityService
 
 resources:
   pipelines:
@@ -30,14 +34,4 @@ stages:
                   VARIABLES_KVM: identity-service-variables
                   ENCRYPTED_VARIABLES_KVM: identity-service-variables-encrypted
                   IDENTITY_TARGET_SERVER: identity-server
-              - template: templates/deploy-service.yml
-                parameters:
-                  SERVICE_NAME: IdentityService
-                  SERVICE_BASE_PATH: /oauth2
-
-- stage: DeployInternalDevSandbox
-  displayName: internal-dev (sandbox)
-  jobs:
-  - job: DeployInternalDevSandbox
-    steps:
-    - script: echo second stage
+              - template: templates/deploy-namespaced-service.yml
